img margin bottom

--- a/booking-form.html
+++ b/booking-form.html
@@ -16,7 +16,7 @@
 </head>
 
 <style>
-form {
+.booking-form form {
    width:100%;
    max-width: 600px;
    background-color:rgb(255, 255, 255, .7);
@@ -32,16 +32,18 @@ form {
     background-repeat: no-repeat;
     height:100%;  
 }
-form img{
+.booking-form form img{
     width: 60px;
     border: 2px solid white;
     border-radius: 5px;
     
 }
-form li{
+.booking-form form li{
     list-style: none;
     display: inline-block;  
 }
+
+
 </style>
 
 
